fix Errors, new models dniTipe and others GDuran
